# mathnotebooks

./: README.md  main.py  pyproject.toml
notebooks/: sir_model_v1.ipynb
notebooks/differential_equations/: first_order_ode.ipynb  lorenz_system.ipynb  lotka_volterra_equations.ipynb  runge_kutta_rk4.ipynb  second_order_ode.ipynb  sir_model_v1.ipynb
notebooks/geometry/: gabriels_horn.ipynb
notebooks/linear_algebra/: deep_learning_review.ipynb  vector_field.ipynb
notebooks/number_theory/: collatz_v1.ipynb
