[project]
name = "mathnotebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scipy>=1.16.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
